--- a/main.ui
+++ b/main.ui
@@ -389,14 +389,23 @@
      <string>Ikä</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="ageSpinBox">
+   <widget class="QDateEdit" name="birthDateEdit">
     <property name="geometry">
      <rect>
       <x>230</x>
       <y>30</y>
-      <width>42</width>
+      <width>110</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="locale">
+     <locale language="Finnish" country="Finland"/>
+    </property>
+    <property name="displayFormat">
+     <string>yyyy-MM-dd</string>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -414,7 +423,6 @@
  </widget>
  <tabstops>
   <tabstop>nameLineEdit</tabstop>
-  <tabstop>ageSpinBox</tabstop>
   <tabstop>wighingDateEdit</tabstop>
   <tabstop>genderComboBox</tabstop>
   <tabstop>heightSpinBox</tabstop>
