--- a/main.ui
+++ b/main.ui
@@ -501,6 +501,7 @@
     <property name="title">
      <string>Ohjeet</string>
     </property>
+    <addaction name="actionOhje"/>
    </widget>
    <addaction name="menuTiedosto"/>
    <addaction name="menuMuokkaa"/>
@@ -580,6 +581,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+D</string>
+   </property>
+  </action>
+  <action name="actionOhje">
+   <property name="text">
+    <string>Ohje</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+H</string>
    </property>
   </action>
  </widget>
